--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Write Per Line Tool</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #0e0e0e;
       color: white;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     header {
@@ -27,23 +30,29 @@
       font-size: 2rem;
     }
 
+    /* Container for the text area and Go button */
     #inputArea {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 2rem;
+      width: 100%;
     }
 
+    /* Flex row for text area and button; centered by default. */
     .textRow {
       display: flex;
-      align-items: flex-start;
+      align-items: center; /* default: center them vertically */
       gap: 10px;
+      justify-content: center;
+      width: 100%;
+      max-width: 900px;
     }
 
-    /* Changed #textInput to be flexible on mobile */
+    /* Textarea, wider on desktop, but mobile query will narrow it. */
     #textInput {
       width: 100%;
-      max-width: 600px;
+      max-width: 800px;
       height: 150px;
       border-radius: 15px;
       border: none;
@@ -55,7 +64,6 @@
       white-space: pre;
       overflow-x: auto;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      box-sizing: border-box;
     }
 
     #previewPanel {
@@ -63,7 +71,9 @@
       flex-direction: row;
       gap: 20px;
       align-items: flex-start;
+      justify-content: center;
       margin-top: 2rem;
+      width: 100%;
     }
 
     #previewList {
@@ -77,7 +87,6 @@
       font-size: 1rem;
       white-space: pre;
       line-height: 1.6;
-      box-sizing: border-box;
     }
 
     #startPanel {
@@ -105,10 +114,30 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background 0.3s ease;
+      white-space: nowrap;
+      flex-shrink: 0;
     }
 
     .button:hover {
       background: #2c2ccc;
+    }
+
+    /* Special orientation-based rules:
+       - Portrait: limit button width
+       - Landscape: align items at top + limit button height  */
+    @media (orientation: portrait) {
+      .textRow button {
+        max-width: 120px; /* keep it from getting too wide */
+      }
+    }
+    @media (orientation: landscape) {
+      .textRow {
+        align-items: flex-start; /* align top with the textarea */
+      }
+      .textRow button {
+        max-height: 3rem;        /* keep it from getting too tall */
+        margin-top: 0;           /* ensure it sits at the top */
+      }
     }
 
     #stats {
@@ -165,7 +194,7 @@
       padding: 8rem 4rem 4rem 4rem;
       margin: 0 auto;
       max-width: 1000px;
-      box-sizing: border-box;
+      font-size: 1.5rem;
     }
 
     .line {
@@ -180,9 +209,8 @@
       color: #222;
     }
 
-    /* Updated mobile "Next" button to match other button shapes */
     #mobileNextButton {
-      display: none; /* Only shown on mobile */
+      display: none; /* Hidden until reading starts on mobile */
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -194,7 +222,7 @@
       font-weight: bold;
       color: white;
       background-color: #3a3aff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
       cursor: pointer;
     }
 
@@ -202,15 +230,15 @@
       background-color: #2c2ccc;
     }
 
-    /* Media queries for better mobile compatibility */
+    /* Mobile width tweaks */
     @media (max-width: 768px) {
       .textRow {
         flex-direction: column;
-        width: 100%;
+        max-width: 600px; /* narrower on mobile */
       }
       #textInput {
-        width: 90%;
-        max-width: none;
+        width: 100%;
+        max-width: 600px;
       }
       #previewList {
         width: 90%;
@@ -223,6 +251,7 @@
       #content {
         padding: 4rem 1rem;
         max-width: 100%;
+        font-size: 1.25rem;
       }
     }
   </style>
@@ -295,6 +324,10 @@
       timestamps = [];
       showNextLine();
       updateStats();
+      // Show mobile "Next" button if on a mobile device
+      if (isMobileDevice()) {
+        document.getElementById('mobileNextButton').style.display = 'block';
+      }
     }
 
     function showNextLine() {
@@ -355,7 +388,7 @@
       document.getElementById('etaTime').textContent = `End at: ${finishTime}`;
     }
 
-    // Keyboard-based navigation
+    // Keyboard navigation
     document.addEventListener('keydown', (e) => {
       if ((e.key === 'Enter' || e.key === ' ') && lines.length > 0) {
         e.preventDefault();
@@ -364,14 +397,14 @@
       }
     });
 
-    // Touch-based navigation (tap near the current line)
+    // Touch navigation (tap near the current line)
     document.addEventListener('touchend', function(e) {
       if (lines.length > 0) {
         const currentElem = document.getElementById(`line-${currentLine}`);
         if (currentElem) {
           const rect = currentElem.getBoundingClientRect();
           const touch = e.changedTouches[0];
-          const buffer = 20; // 20px margin of error
+          const buffer = 20; // 20px margin
           if (
             touch.clientX >= rect.left - buffer && touch.clientX <= rect.right + buffer &&
             touch.clientY >= rect.top - buffer && touch.clientY <= rect.bottom + buffer
@@ -383,23 +416,16 @@
       }
     });
 
-    // Function for the mobile button
+    // Mobile button function
     function mobileNextLine() {
       showNextLine();
       updateStats();
     }
 
-    // Simple check for mobile device
+    // Basic mobile detection
     function isMobileDevice() {
       return /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
     }
-
-    // Show mobile button if user is on mobile
-    window.addEventListener('DOMContentLoaded', () => {
-      if (isMobileDevice()) {
-        document.getElementById('mobileNextButton').style.display = 'block';
-      }
-    });
   </script>
 </body>
 </html>
